# odoo

./: .gitignore  docker-compose.yml
config/: odoo.conf
extra-addons/codigos_barras/: __manifest__.py
extra-addons/controlo_gasoleo/: __manifest__.py
extra-addons/document_knowledge/: __manifest__.py
extra-addons/document_page/: README.rst  __manifest__.py
extra-addons/document_page_procedure/: README.rst  __manifest__.py
extra-addons/formularios/: __manifest__.py
extra-addons/mgmtsystem/: README.rst  __manifest__.py
extra-addons/mgmtsystem_action/: README.rst  __manifest__.py
extra-addons/mgmtsystem_nonconformity/: README.rst  __manifest__.py
extra-addons/project_recurrence_defer18/: __manifest__.py
extra-addons/project_recurrence_skip_first/: __manifest__.py
extra-addons/qualidade_reclamacoes/: __manifest__.py
extra-addons/qualidade_reclamacoes_bkp_2026-04-15/: __manifest__.py
extra-addons/quality_complaint/: __manifest__.py
extra-addons/tarefas/: __manifest__.py
oca-web/: README.md  checklog-odoo.cfg  requirements.txt
oca-web/setup/_metapackage/: pyproject.toml
oca-web/web_calendar_slot_duration/: README.rst  __manifest__.py
oca-web/web_company_color/: README.rst  __manifest__.py
oca-web/web_copy_confirm/: README.rst  __manifest__.py
oca-web/web_dark_mode/: README.rst  __manifest__.py
oca-web/web_datetime_picker_default_time/: README.rst  __manifest__.py
oca-web/web_editor_class_selector/: README.rst  __manifest__.py
oca-web/web_editor_disable_chatgpt/: README.rst  __manifest__.py
oca-web/web_excel_export_dynamic_expand/: README.rst  __manifest__.py
oca-web/web_filter_header_button/: README.rst  __manifest__.py
oca-web/web_form_banner/: README.rst  __manifest__.py
oca-web/web_group_expand/: README.rst  __manifest__.py
oca-web/web_ir_actions_act_multi/: README.rst  __manifest__.py
oca-web/web_ir_actions_act_window_message/: README.rst  __manifest__.py
oca-web/web_m2x_options_manager/: README.rst  __manifest__.py
oca-web/web_notify_channel_message/: README.rst  __manifest__.py
oca-web/web_notify_upgrade/: README.rst  __manifest__.py
oca-web/web_pwa_customize/: README.rst  __manifest__.py
oca-web/web_quick_start_screen/: README.rst  __manifest__.py
oca-web/web_refresher/: README.rst  __manifest__.py
oca-web/web_remember_tree_column_width/: README.rst  __manifest__.py
oca-web/web_save_discard_button/: __manifest__.py
oca-web/web_send_message_popup/: README.rst  __manifest__.py
oca-web/web_session_auto_close/: README.rst  __manifest__.py
oca-web/web_sort_menu/: README.rst  __manifest__.py
oca-web/web_systray_button_init_action/: README.rst  __manifest__.py
oca-web/web_theme_classic/: README.rst  __manifest__.py
oca-web/web_touchscreen/: README.rst  __manifest__.py
oca-web/web_tree_column_keyboard_resize/: README.rst  __init__.py  __manifest__.py
oca-web/web_widget_domain_editor_dialog/: README.rst  __manifest__.py
oca-web/web_widget_dropdown_dynamic/: README.rst  __manifest__.py
(+541 files in other folders)
