[project]
name = "odoo-addons-oca-web"
version = "18.0.20260115.0"
dependencies = [
    "odoo-addon-web_calendar_slot_duration==18.0.*",
    "odoo-addon-web_chatter_position==18.0.*",
    "odoo-addon-web_company_color==18.0.*",
    "odoo-addon-web_copy_confirm==18.0.*",
    "odoo-addon-web_dark_mode==18.0.*",
    "odoo-addon-web_datetime_picker_default_time==18.0.*",
    "odoo-addon-web_dialog_size==18.0.*",
    "odoo-addon-web_disable_export_group==18.0.*",
    "odoo-addon-web_editor_class_selector==18.0.*",
    "odoo-addon-web_editor_disable_chatgpt==18.0.*",
    "odoo-addon-web_environment_ribbon==18.0.*",
    "odoo-addon-web_excel_export_dynamic_expand==18.0.*",
    "odoo-addon-web_favicon==18.0.*",
    "odoo-addon-web_filter_header_button==18.0.*",
    "odoo-addon-web_form_banner==18.0.*",
    "odoo-addon-web_group_expand==18.0.*",
    "odoo-addon-web_ir_actions_act_multi==18.0.*",
    "odoo-addon-web_ir_actions_act_window_message==18.0.*",
    "odoo-addon-web_m2x_options==18.0.*",
    "odoo-addon-web_m2x_options_manager==18.0.*",
    "odoo-addon-web_no_bubble==18.0.*",
    "odoo-addon-web_notify==18.0.*",
    "odoo-addon-web_notify_channel_message==18.0.*",
    "odoo-addon-web_notify_upgrade==18.0.*",
    "odoo-addon-web_pivot_computed_measure==18.0.*",
    "odoo-addon-web_pwa_customize==18.0.*",
    "odoo-addon-web_quick_start_screen==18.0.*",
    "odoo-addon-web_refresher==18.0.*",
    "odoo-addon-web_remember_tree_column_width==18.0.*",
    "odoo-addon-web_responsive==18.0.*",
    "odoo-addon-web_save_discard_button==18.0.*",
    "odoo-addon-web_search_with_and==18.0.*",
    "odoo-addon-web_send_message_popup==18.0.*",
    "odoo-addon-web_session_auto_close==18.0.*",
    "odoo-addon-web_sort_menu==18.0.*",
    "odoo-addon-web_systray_button_init_action==18.0.*",
    "odoo-addon-web_theme_classic==18.0.*",
    "odoo-addon-web_timeline==18.0.*",
    "odoo-addon-web_touchscreen==18.0.*",
    "odoo-addon-web_tree_column_keyboard_resize==18.0.*",
    "odoo-addon-web_tree_dynamic_colored_field==18.0.*",
    "odoo-addon-web_tree_many2one_clickable==18.0.*",
    "odoo-addon-web_widget_bokeh_chart==18.0.*",
    "odoo-addon-web_widget_domain_editor_dialog==18.0.*",
    "odoo-addon-web_widget_dropdown_dynamic==18.0.*",
    "odoo-addon-web_widget_mpld3_chart==18.0.*",
    "odoo-addon-web_widget_numeric_step==18.0.*",
    "odoo-addon-web_widget_one2many_tree_line_duplicate==18.0.*",
    "odoo-addon-web_widget_open_tab==18.0.*",
    "odoo-addon-web_widget_popover==18.0.*",
    "odoo-addon-web_widget_product_label_section_and_note_full_label==18.0.*",
    "odoo-addon-web_widget_product_label_section_and_note_name_visibility==18.0.*",
    "odoo-addon-web_widget_url_advanced==18.0.*",
    "odoo-addon-web_widget_x2many_2d_matrix==18.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 18.0",
]
